# olympiadAlgoLib

./: README.md
competitive_algorithms/: CMakeLists.txt
competitive_algorithms/catch2/: catch.h
competitive_algorithms/competitiveProgAlgoLib/: Array.h  Edge.h  FenwickTree.h  Graph.h  IDataStructure.h  IEdge.h  IMutableDataStructure.h  ISegmentSolver.h  ISparseTable.h  SegmentTree.h  SparseTable.h  SqrtDecomposer.h  SuffixAutomaton.h  Treap.h  WeightedEdge.h
competitive_algorithms/functional_test/: GraphTest1.cpp  GraphTest2.cpp  SegTreeTest1.cpp  SegTreeTest2.cpp  SuffixAutomatonTest1.cpp  SuffixAutomatonTest2.cpp
competitive_algorithms/test/: test.cpp
competitive_algorithms/unit_test/: test.cpp
